@@ -9,6 +9,8 @@ tasksel (2.07) UNRELEASED; urgency=low
     - Modularised how the list of packages in a task is determined.
     - Play with server relevance values a bit to order web server and print
       server to the top.
+    - Use aptitude's new --visual-preview option to allow selection and then
+      fine-tuning of tasks.
   * Per Olofsson
     - Added openoffice.org-help-sv and gimp-help-sv to swedish-desktop.
       Closes: #259832.
